--- a/src/components/Navbar-SuperAdmin.astro
+++ b/src/components/Navbar-SuperAdmin.astro
@@ -16,7 +16,7 @@ const currentPath = Astro.url.pathname;
 
 // Define your menu items with their href paths and new Lucide icon names
 const menuItems = [
-  { name: "Dashboard", href: "/home", icon: LayoutDashboard }, // Use the imported Lucide component directly
+  { name: "Dashboard", href: "/dashboard/super-admin", icon: LayoutDashboard }, // Use the imported Lucide component directly
   { name: "My Account", href: "/my-account", icon: User },
   { name: "Firms", href: "/super-admin/firm-management", icon: Building },
   {
