--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -10,7 +10,7 @@ const menuItems = [
   { name: "Dashboard", href: "/dashboard/firm-admin", icon: "dashboard" },
   { name: "My Account", href: "/my-account", icon: "my-account" },
   { name: "Locations", href: "/locations", icon: "locations" },
-  { name: "Employees", href: "/employees", icon: "employees" },
+  { name: "Employees", href: "firm-admin/employee", icon: "employees" },
   { name: "Alert Logs", href: "/alert-logs", icon: "alert-logs" },
   {
     name: "Drill Alert Log",
